--- a/application/public/themes/own/tpl/index.html
+++ b/application/public/themes/own/tpl/index.html
@@ -1,36 +1,5 @@
-<!--<!DOCTYPE html>
-<html lang="ca">
-<head>
-	<title>trav agency</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="{APP_W}/application/public/themes/{THEME}/css/estil.css">
-	<!-- jQuery library (served from Google) 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <!-- bxSlider Javascript file 
-        <script src="{APP_W}/application/public/themes/{THEME}/js/jquery.bxslider.min.js"></script>
-        <!-- bxSlider CSS file 
-        <link href="{APP_W}/application/public/themes/{THEME}/css/jquery.bxslider.css" rel="stylesheet" />
-        <link href='//fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'/>
-        <script src="{APP_W}/application/public/themes/{THEME}/js/main.js"></script>
-</head>
-<body>
 
-	
-
-		<div id="header">
-                    <div id="ident"><ul><li><a href="#"><span class="login">Login&nbsp;</span></a></li><li><a href="#"><span class="login">&nbsp;Cistell</span></a></li></ul></div>
-                    <h1 style="margin-bottom:0;"><a href="{APP_W}/">Travel Agency</<a></h1>
-		</div> -->
 	<div id="container">
-		<div id="menu">
-			<ul>
-                            <li><a href="#">Hotels</a></li>
-			    <li><a href="#">Plans</a></li>
-                            <li><a href="#">Vols</a></li>
-                            <li><a href="{APP_W}/user">Clients</a></li>
-			</ul>
-		</div>
-
 		<div id="content" >
                     <div id="slide">
                         <ul class="bxslider">
@@ -42,13 +11,14 @@
                     </div>
 		
                 <div id="output">
-                    <div id="formlog">
+                    <div id="buscador">
+                        
+                        <div>
+                    <div id="formlog"> <h3>Registre</h3>
                         <form class="log" action="{APP_W}/user/login" method="post">
-                            <h3>Registre</h3>
-                            <form class="form" action="login.php" method="post">
-                            <label>Email<input type="text" name="nick" required="true" placeholder="Introduce tu nick" /></label>
-                            <label>Password<input type="password" name="password" required="true" placeholder="Introduce tu password" /></label>
-                            <input type="submit" value="Login" />
+                           <label>Email<input type="text" id="email" name="email" required="true" placeholder="Introduce tu nick" /></label>
+                           <label>Password<input type="password" id="password" name="password" required="true" placeholder="Introduce tu password" /></label>
+                           <input type="submit" id="log" value="Login" />
         
                         </form>
 </form>
